--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
       align-items:flex-start;
     }
 
-    /* Left column wrapper to keep inputs aligned left and 80% width of card area */
     .input-left{
       display:flex;
       flex-direction:column;
@@ -169,6 +168,15 @@
       text-align:left;
     }
     .warning.show{display:block;}
+
+    .email-error{
+      color:#ff6b6b;
+      font-size:13px;
+      margin-top:6px;
+      display:none;
+      text-align:left;
+    }
+    .email-error.show{display:block;}
 
     /* Roles grid - 2 columns desktop, 1 on small screens */
     .roles-grid{
@@ -216,7 +224,7 @@
       pointer-events:none;
     }
 
-    /* accepted cards row under paypal */
+    /* accepted cards row under paypal - PayPal, Visa, MasterCard only */
     .accepted-cards{
       display:flex;
       gap:8px;
@@ -292,6 +300,7 @@
         </div>
 
         <div id="warning" class="warning">⚠️ Please fill in your GrowID and Email to enable payment.</div>
+        <div id="emailError" class="email-error">⚠️ Invalid email address — must include "@".</div>
 
         <div class="roles-grid" id="rolesGrid" aria-live="polite"></div>
       </div>
@@ -301,14 +310,13 @@
   </div>
 
   <script>
-    // Initialize EmailJS (if loaded)
+    // Initialize EmailJS on load if available
     window.addEventListener('load', () => {
       if (window.emailjs) {
         try { emailjs.init("zEjStXCET2RlB2UuJ"); } catch(e){ console.warn('EmailJS init error', e); }
       }
     });
 
-    // Roles dataset
     const roles = [
       { name: "Moderator", price: "3.29" },
       { name: "Super Moderator", price: "5.39" },
@@ -321,8 +329,14 @@
     const growInput = document.getElementById('growid');
     const emailInput = document.getElementById('buyerEmail');
     const warningEl = document.getElementById('warning');
+    const emailErrorEl = document.getElementById('emailError');
 
-    // Create role cards with PayPal placeholders + accepted card logos
+    // utility: email valid if contains '@'
+    function isEmailValid(email){
+      return email.includes('@');
+    }
+
+    // Build role cards
     roles.forEach(role => {
       const roleWrap = document.createElement('div');
       roleWrap.className = 'role';
@@ -344,12 +358,10 @@
 
       const accepted = document.createElement('div');
       accepted.className = 'accepted-cards';
-      // Using Wikimedia-hosted svg logos (small, widely available). Change URLs if you prefer.
       accepted.innerHTML = `
         <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal" title="PayPal" />
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa" title="Visa" />
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="MasterCard" title="MasterCard" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Discover_Card_logo.svg" alt="Discover" title="Discover" />
       `;
 
       inner.appendChild(title);
@@ -359,7 +371,7 @@
       roleWrap.appendChild(inner);
       rolesGrid.appendChild(roleWrap);
 
-      // Render PayPal button (retry until SDK available)
+      // Render PayPal button (retry if SDK not loaded yet)
       (function renderPayPal(){
         if (window.paypal && paypal.Buttons) {
           paypal.Buttons({
@@ -376,7 +388,7 @@
 
               alert(`✅ ${role.name} purchased by ${paypalName}`);
 
-              // Send transaction to EmailJS (if configured)
+              // Send transaction to EmailJS (if available/configured)
               if (window.emailjs) {
                 emailjs.send("service_6ba3mun", "template_06qc85l", {
                   to_email: "growfaxz@gmail.com",
@@ -397,18 +409,30 @@
       })();
     });
 
-    // Toggle payability & warning (disabled state)
-    function updatePayability() {
-      const ok = growInput.value.trim() && emailInput.value.trim();
+    // Update payability & messages
+    function updatePayability(){
+      const growFilled = growInput.value.trim().length > 0;
+      const emailVal = emailInput.value.trim();
+      const emailNonEmpty = emailVal.length > 0;
+      const emailValid = isEmailValid(emailVal);
+
+      const ok = growFilled && emailNonEmpty && emailValid;
+
       document.querySelectorAll('.paypal-wrapper').forEach(w => {
         w.classList.toggle('disabled', !ok);
       });
-      warningEl.classList.toggle('show', !ok);
+
+      // general warning: show when either missing growid or email (or invalid)
+      warningEl.classList.toggle('show', !(growFilled && emailNonEmpty));
+
+      // email-specific error (red) show when email non-empty but invalid
+      emailErrorEl.classList.toggle('show', emailNonEmpty && !emailValid);
     }
+
     growInput.addEventListener('input', updatePayability);
     emailInput.addEventListener('input', updatePayability);
 
-    // Copy utility for download buttons
+    // copy utility for download buttons
     const configData = {
       powertunnel: `91.134.85.13 growtopia1.com
 91.134.85.13 growtopia2.com
@@ -424,42 +448,46 @@ growtopia2.com = 91.134.85.13
 www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13`
     };
-    function copyText(key, btn) {
-      navigator.clipboard.writeText(configData[key]).then(() => {
+    function copyText(key, btn){
+      navigator.clipboard.writeText(configData[key]).then(()=>{
         const old = btn.textContent;
         btn.textContent = "✅ Copied!";
-        setTimeout(()=> btn.textContent = old, 1400);
-      }).catch(()=>{ alert('Copy failed.'); });
+        setTimeout(()=> btn.textContent = old, 1300);
+      }).catch(()=> alert('Copy failed.'));
     }
 
     // Sydney clock
-    function updateClock() {
+    function updateClock(){
       const now = new Date();
       const sydney = new Date(now.toLocaleString('en-US', { timeZone: 'Australia/Sydney' }));
       document.getElementById('clock').textContent = 'Sydney Time: ' + sydney.toLocaleTimeString('en-GB');
     }
     updateClock(); setInterval(updateClock, 1000);
 
-    // Theme & Language toggles (default EN)
-    function toggleTheme() {
+    // Theme & language toggles (default English)
+    function toggleTheme(){
       document.body.classList.toggle('light');
     }
 
     let lang = 'en';
-    function toggleLang() {
+    function toggleLang(){
       lang = (lang === 'en') ? 'id' : 'en';
       const en = lang === 'en';
       document.querySelector('.btn-small[onclick="toggleLang()"]').textContent = en ? '🌍 Indonesia' : '🌍 English';
       document.getElementById('title').textContent = en ? 'Growfax — Download Files' : 'Growfax — Unduh File';
       document.getElementById('desc').textContent = en ? 'Choose the file you want to copy or download.' : 'Pilih file yang ingin disalin atau diunduh.';
       document.getElementById('roleshop').textContent = en ? 'Role Shop' : 'Toko Role';
-      // Warning translations
+
+      // translations for warnings
       warningEl.textContent = en
         ? '⚠️ Please fill in your GrowID and Email to enable payment.'
         : '⚠️ Isi GrowID dan Email terlebih dahulu untuk mengaktifkan pembayaran.';
+      emailErrorEl.textContent = en
+        ? '⚠️ Invalid email address — must include "@".'
+        : '⚠️ Email tidak valid — harus mengandung "@".';
     }
 
-    // Initialize state on load
+    // initialize UI state
     updatePayability();
   </script>
 </body>
